# CodeGuru-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  vercel.json
backend/: .env.example  .vercelignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base_agent.py  coordinator_agent.py  debugger_agent.py  interviewer_agent.py  reviewer_agent.py  teacher_agent.py
backend/app/ai/: __init__.py  output_validator.py  router.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  security.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/engine/: __init__.py  bandit_analyzer.py  base_analyzer.py  gemini_synthesizer.py  pylint_analyzer.py  radon_analyzer.py  review_engine.py  treesitter_analyzer.py
backend/app/middleware/: __init__.py  logging_middleware.py  rate_limit.py
backend/app/models/: __init__.py  dsa_progress.py  interview.py  profile.py  prompt.py  rag.py  review.py  session.py  submission.py  usage.py  user.py
backend/app/repositories/: __init__.py  base.py  dsa_progress_repo.py  interview_repo.py  rag_repo.py  review_repo.py  user_repo.py
backend/migrations/: env.py
backend/monitoring/: prometheus.yml
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_billing.py  test_coordinator.py  test_dsa.py  test_engine.py  test_interview.py  test_rag.py  test_reviews.py
docs/: API.md  (+1 more)
(+134 files in other folders)
