[tool.poetry]
name = "codeguru-ai-backend"
version = "0.1.0"
description = "AI-powered coding mentor backend"
authors = ["CodeGuru AI Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = "^0.30.0"
pydantic = "2.7.4"
pydantic-settings = "^2.3.0"
mangum = "^0.17.0"
sqlalchemy = "2.0.31"
alembic = "1.13.1"
asyncpg = "0.29.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "4.1.3"
python-multipart = "0.0.9"
aiofiles = "^23.2.1"
httpx = "^0.27.0"
slowapi = "^0.1.9"
python-json-logger = "2.0.7"
prometheus-fastapi-instrumentator = "7.0.0"
langchain = "0.2.0"
langchain-openai = "^0.1.8"
langchain-community = "0.2.0"
openai = "1.30.0"
tiktoken = "0.7.0"
ollama = "^0.2.1"
tree-sitter = "^0.24.0"
tree-sitter-python = "^0.23.0"
tree-sitter-javascript = "^0.23.0"
pylint = "^3.3.0"
bandit = "^1.8.0"
radon = "^6.0.0"
pypdf = "^4.2.0"
stripe = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
